Prevent button collapsing on mobile
Fixes https://github.com/redbadger/react.london/issues/192

--- a/shared/components/TicketList/index.scss
+++ b/shared/components/TicketList/index.scss
@@ -41,6 +41,7 @@
     padding-bottom: 25px;
   }
   &__booking-btn {
+    display: inline-block;
     border-radius: 6px;
     text-transform: uppercase;
     border: 0px;
